- aes/gemdosif.h - change tikaddr and tiksav to void *  (MAD)

09. Nov. 2002
- aes/gemgsxif.c - changed i_lptr1 to use just one argument (MAD)

16. Nov. 2002
- aes/gemdisp.c - schedule() loop now sleeps with the STOP #2300 insn (joy)

22. Nov. 2002
- vdi/vdimain.c - change timer vectors to be used as pointers (MAD)

13. Jan. 2003
- bios/natfeat.[hS] - NatFeat stuff moved to separate files (joy)
- bios/startup.S, bios/machine.c - cleaned up (joy)
- "__NF" cookie now contains pointer to the NatFeat structure with
  function pointers (joy)

14. Jan. 2003
- bios/vectors.S - the screenpt must be cleared after successful video
  registers update (joy)
- NatFeat calling cleaned up - uses function pointers now (joy)

20. Jan. 2003
- bdos/fsdir.c - Fsfirst/Fsnext nesting fixed. This was a very important
  fix since without this the AUTO folder processing didn't work (Standa)
- bdos/proc.c - local or global variable referenced? Fixed by a wild
  guess (Standa)
- bios/bios.c - restore our DTA when processing the AUTO folder since
  the executed AUTO program could have changed it in the meantime (joy)
- bios/blkdev.c - TOS uses a different algorithm for detecting whether
  a FAT partition is 12-bit or 16-bit. From mtools I understood that
  anything with non-floppy-standard cluster number (probably 720/1440)
  is considered to be 16-bit FAT. Without this patch 4 MB disk image
  formatted with TOS could not be used under EmuTOS. Now fixed (joy)

21. Jan. 2003
- bdos/fsfirst.c - yesterday's patch corrected (Standa)
- bios/bios.c - the Setdta() should not be needed (Standa)

29. Jan. 2003
- bdos/kpgmld.c - cleaned interface with proc.c a little bit (LVL)
- bdos/proc.c - yet another cleanup of the xexec() implementation; there
  should be no memory leak any more in case of IO error, but of course this
  feature is untested as of now (LVL)

1. Feb. 2003
- bios/ikbd.[ch] - dead keys fixed, backspace seems to work okay now (LVL)